infrastructure/tekton-pipelines/virtualservice-dashboard.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tekton-dashboard
  namespace: "${infranamespaceprefix}tekton-pipelines"
spec:
  hosts:
  - ci.pauwelslabs.com
  gateways:
  - ${infranamespaceprefix}istio-ingress/pauwelslabs-com
  http:
  - name: "tekton-dashboard"
    route:
    - destination:
        port:
          number: 9097
        host: tekton-dashboard
